# CS409-Final-Project

./: README.md
envs/: registry.yaml
envs/calendar/: README.md  docker-compose.yml  init_data.sh
envs/calendar/calendar_api/: .dockerignore  Dockerfile  auth.py  database.py  main.py  models.py  pyproject.toml  sandbox_init.py  schemas.py
envs/calendar/calendar_ui/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
envs/calendar/init_examples/: basic_scenario.json
envs/email/: README.md  docker-compose.override.yml  docker-compose.yml
envs/email/gmail_ui/: .gitignore  README.md  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
envs/email/init_examples/: README.md  abcde_users.json  agent_testing_scenario.json  basic_scenario.json  customer_support_scenario.json
envs/email/user_service/: Dockerfile  __init__.py  api_proxy.py  auth_api.py  database.py  ownership_tracker.py  requirements.txt  sandbox_init.py  start.sh
envs/ers/: docker-compose.yml
envs/financial_analysis/: Dockerfile  README.md  docker-compose.yml
envs/financial_analysis/init_examples/: basic_scenario.json
envs/financial_trading/: Dockerfile  README.md  docker-compose.yml
envs/financial_trading/init_examples/: basic_scenario.json
envs/google-form/: docker-compose.yml
envs/google-form/init/: schema.sample.json
envs/google-form/schemas/: schema.json
envs/google-form/server/: Dockerfile  app.py  requirements.txt
envs/google-form/ui/: Dockerfile  index.html  nginx.conf  package.json
envs/macos/: README.md  docker-compose.yml
envs/paypal/: docker-compose.yml
envs/paypal/api/: main.py  sandbox_init.py
envs/paypal/init/: 01_init.sql
envs/paypal/init_examples/: basic_users.json
envs/paypal/paypal_ui/: Dockerfile  nginx.conf  package.json
envs/research/: Dockerfile  docker-compose.yml
envs/slack/: docker-compose.yml
envs/slack/slack_api/: Dockerfile  main.py  pyproject.toml  seed_users.py
envs/slack/slack_ui/: Dockerfile  nginx.conf  package.json
envs/snowflake/: docker-compose.yml
envs/snowflake/init/: 01_init.sql  02_complex_schema.sql
envs/snowflake/init_examples/: basic_scenario.json
envs/terminal/: Dockerfile  README.md  docker-compose.yml
envs/travel/: run_env.sh
envs/travel/frontend/: app.js  booking_functions.js  index.html  start_server.py  style.css
envs/travel/frontend-old/: app.js  index.html  start_server.py  start_server.sh  style.css
envs/windows/: README.md  docker-compose.yml
envs/zoom/: README.md  docker-compose.yml
mcp_server/: README.md  registry.yaml  start_servers.py
mcp_server/alpha_vantage/: README.md  main.py  pyproject.toml  start.sh
mcp_server/calendar/: README.md  SUMMARY.md  example_multi_user.py  main.py  start.sh  test_mcp.py
mcp_server/databricks/: main.py  probe.py  pyproject.toml
mcp_server/ers/: main.py  pyproject.toml
mcp_server/financial_analysis/: README.md  analysis_tools.py  data_source_tools.py  main.py  pyproject.toml  quantitative_tools.py  start.sh
mcp_server/financial_trading/: README.md  fundamental_analysis_tools.py  main.py  market_data_tools.py  news_sentiment_tools.py  pyproject.toml  social_media_tools.py  start.sh  technical_indicators_tools.py  test_yahoo.sh
mcp_server/finnhub/: README.md  main.py  pyproject.toml  start.sh
mcp_server/gmail/: README.md  main.py  start.sh
mcp_server/google_form/: main.py  start.sh
mcp_server/macos/: README.md  client_test.py  mcp_server.py
mcp_server/paypal/: main.py  pyproject.toml  sandbox.db  start.sh
mcp_server/quantitative_analysis/: README.md  main.py  pyproject.toml  start.sh
mcp_server/reddit/: README.md  main.py  pyproject.toml  start.sh
mcp_server/research/: README.md  main.py  pyproject.toml  start.sh
mcp_server/sec_edgar/: README.md  main.py  pyproject.toml  start.sh
mcp_server/slack/: main.py  start.sh
mcp_server/snowflake/: main.py  probe.py  pyproject.toml  start.sh
mcp_server/suitecrm/: README.md  main.py  start.sh
mcp_server/technical_analysis/: README.md  main.py  pyproject.toml  start.sh
mcp_server/terminal/: README.md  main.py  start.sh
mcp_server/travel/: client_test.py  mcp_server.py  start.sh
mcp_server/windows/: README.md  mcp_server.py
mcp_server/yfinance/: README.md  main.py  pyproject.toml  start.sh
mcp_server/zoom/: README.md  main.py  pyproject.toml  start.sh
src/types/: agent.py  judge.py  task.py  trajectory.py
twitter-sandbox/: .gitignore  README.md  create_twitter_langflow.py  package.json  pnpm-lock.yaml
twitter-sandbox/app/: globals.css  layout.tsx  loading.tsx  providers.tsx
twitter-sandbox/components/: create-post.tsx  edit-profile-dialog.tsx  feed.tsx  post-card.tsx  right-sidebar.tsx  sidebar.tsx  token-dialog.tsx
twitter-sandbox/scripts/: 001_create_database.sql
utils/calendar/: helpers.py
utils/gmail/: helpers.py
utils/paypal/: helpers.py
utils/slack/: helpers.py
utils/snowflake/: helpers.py
utils/zoom/: helpers.py
(+77 files in other folders)
