[project]
name = "mcp-server-databricks-local"
version = "0.1.0"
description = "Databricks MCP server (local simulation) with Postgres/FAISS and optional OpenAI"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "numpy>=1.26.0",
  "psycopg[binary]>=3.2.0",
  "faiss-cpu>=1.7.4; platform_machine != 'aarch64'",
  "openai>=1.0.0",
]

[project.scripts]
databricks-mcp = "main:main"


