[project]
name = "financial-analysis-mcp"
version = "0.1.0"
description = "Financial Analysis MCP Server - FinRobot-inspired comprehensive analysis platform"
authors = [
    { name = "FinRobot MCP", email = "finrobot@example.com" }
]
dependencies = [
    "mcp",
    "fastmcp>=0.5.8",
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.10.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "data_source_tools",
    "analysis_tools",
    "quantitative_tools"
]
