[project]
name = "financial-trading-mcp"
version = "0.2.0"
description = "Comprehensive MCP server for financial trading with market data, technical analysis, fundamentals, news, and social media sentiment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.1",
    "httpx>=0.28.1",
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "stockstats>=0.6.2",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "market_data_tools",
    "technical_indicators_tools",
    "fundamental_analysis_tools",
    "news_sentiment_tools",
    "social_media_tools"
]