[project]
name = "finnhub-mcp"
version = "0.1.0"
description = "Finnhub MCP Server - Real-time financial data API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
