[project]
name = "quantitative-analysis-mcp"
version = "0.1.0"
description = "Quantitative Analysis MCP Server - Backtesting, portfolio optimization, and risk metrics"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "scipy>=1.10.0",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
