[project]
name = "reddit-mcp"
version = "0.1.0"
description = "Reddit MCP Server - Social sentiment analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
