[project]
name = "technical-analysis-mcp"
version = "0.1.0"
description = "Technical Analysis MCP Server - Trading indicators and signals"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
