[project]
name = "yfinance-mcp"
version = "0.1.0"
description = "Yahoo Finance MCP Server - Free financial data access"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
